--- a/src/styles/sass/ui/typography.scss
+++ b/src/styles/sass/ui/typography.scss
@@ -18,7 +18,7 @@ p {
 
 ol {
     list-style: decimal;
-    margin-left: 1rem;
+    margin-left: 1em;
 }
 
 a {
